# ddnet-ccac

./: CMakeLists.txt
scripts/: chillerbot_test.sh  ddnet-cmake-merge-tool.sh  set_gametile.py  setup-merge-tools.sh  start_pentest.sh  stop_pentest.sh  strip_gfx.py
scripts/android/: cmake_android.sh
src/base/: ccurses.cpp  ccurses.h  curses.h
src/base/chillerbot/: curses_colors.cpp  curses_colors.h
src/chillerbot-rs/: Cargo.toml  lib.rs  unicode.rs
src/engine/: client.h
src/engine/client/: client.cpp  client.h
src/engine/shared/: config_variables.h  protocol_ex_msgs.h  storage.cpp
src/engine/shared/chillerbot/: variables.h
src/game/client/: gameclient.cpp  gameclient.h  race.cpp  race.h  render.h
src/game/client/components/: chat.cpp  controls.cpp  maplayers.cpp  maplayers.h  menus.h  menus_ccac.cpp  menus_settings.cpp  nameplates.cpp  spectator.cpp
src/game/client/components/ccac/: chatcommand.cpp  chatcommand.h  chatcommands.h  chillerbotux.cpp  chillerbotux.h  version.h  warlist.cpp  warlist.h  warlist_commands_simple.cpp
src/game/editor/: editor.cpp  editor.h
src/game/editor/mapitems/: map_io.cpp
src/test/: chillerbot.cpp
